Add input pin variant with builtin digitizer, closes #17